--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 quarkus.datasource.db-kind=mssql
 quarkus.datasource.jdbc.url=jdbc:sqlserver://10.0.1.88;databaseName=DBHPSM
 quarkus.datasource.username=u_angelo_stefanini
-quarkus.datasource.password=!Q2w3e4r
+quarkus.datasource.password=<censored>
